RESOLVED FIXED73615
[Lion][Windows] Both of placeholder and input text are shown in <input type=number>
https://bugs.webkit.org/show_bug.cgi?id=73615
Summary [Lion][Windows] Both of placeholder and input text are shown in <input type=n...
Kent Tamura
Reported 2011-12-01 20:25:51 PST
This problem happens only OS X Lion and Windows, that is to say, RenderTheme*::shouldShowPlaceholderWhenFocused() returns true. How to reproduce: 1. Focus on a number input with a placeholder such as <input type=number placeholder=placeholder> 2. Type non-digit characters. e.g. 'aaa' Expected result: 3. The placeholder disappears. Actual result: 3. Both of the placeholder and 'aaa' are shown.
Attachments
Patch (6.76 KB, patch)
2011-12-01 21:22 PST, Kent Tamura
no flags
Kent Tamura
Comment 1 2011-12-01 21:22:11 PST
Joseph Pecoraro
Comment 2 2011-12-02 10:35:55 PST
Comment on attachment 117561 [details] Patch Oh nice, is this a ref test? Awesome! r=me
Kent Tamura
Comment 3 2011-12-02 13:50:51 PST
Comment on attachment 117561 [details] Patch Clearing flags on attachment: 117561 Committed r101847: <http://trac.webkit.org/changeset/101847>
Kent Tamura
Comment 4 2011-12-02 13:50:57 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.