[Lion][Windows] Both of placeholder and input text are shown in <input type=number> https://bugs.webkit.org/show_bug.cgi?id=73615

Reviewed by Joseph Pecoraro.

Source/WebCore:

Placeholder visibility was checked by HTMLInputElement::value
emptiness. It should be innerTextValue emptiness because it is
possible that a number field has empty HTMLInputElement::value and
non-empty innerTextValue.

Tests: fast/forms/number/number-placeholder-with-unacceptable-value.html

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::updateInnerTextValue):
We should update placeholder visiblity when the innerTextValue is updated.
(WebCore::HTMLInputElement::subtreeHasChanged): ditto.
(WebCore::HTMLInputElement::setSuggestedValue):
We don't need to call updatePlaceholderVisibility() because updateInnerTextValue() calls it.
(WebCore::HTMLInputElement::setValueFromRenderer):
We don't need to call updatePlaceholderVisibility() because subtreeHasChanged() calls it.
* html/HTMLInputElement.h: Checks innerTextValue emptiness.
* html/TextFieldInputType.cpp:
(WebCore::TextFieldInputType::setValue):
We don't need to call updatePlaceholderVisibility() because updateInnerTextValue() calls it.

LayoutTests:

* fast/forms/number/number-placeholder-with-unacceptable-value-expected.html: Added.
* fast/forms/number/number-placeholder-with-unacceptable-value.html: Added.

Canonical link: https://commits.webkit.org/90318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101847 268f45cc-cd09-0410-ab3c-d52691b4dbfc